<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">


        <TextView
            android:id="@+id/TxtOrderType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="20dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textSize="24sp" />


        <TextView
            android:id="@+id/TxtPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/M"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="18sp" />


            <TextView
                android:id="@+id/TxtMaterial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="18sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/N"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="18sp" />


            <TextView
                android:id="@+id/TxtStone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="18sp" />


        </LinearLayout>


        <TextView
            android:id="@+id/Text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/L"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/TxtMArk"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="18sp" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>